# Paint

./: .qmlls.ini  CMakeLists.txt  GCanvas.qml  Graphiclogic.cpp  Graphiclogic.h  MainPage.qml  MyButton.qml  MyDialog.qml  README.md  abstractgraphic.cpp  abstractgraphic.h  gcircle.cpp  gcircle.h  ghexagon.cpp  gline.cpp  gline.h  gpolygon.cpp  gpolygon.h  grectangle.cpp  grectangle.h  gtriangle.cpp  gtriangle.h  main.cpp
.cache/clangd/index/: Graphiclogic.cpp.238B6DD591255A03.idx  Graphiclogic.cpp.D2E33AEFDC847288.idx  Graphiclogic.h.53E4301A94EF34A3.idx  Graphiclogic.h.FBAF5B05A6E1A18E.idx  abstractgraphic.cpp.4BAFF9B07C8B28C4.idx  abstractgraphic.cpp.D8F74292A4A97DA7.idx  abstractgraphic.h.DB3AB42F3C5D7AE6.idx  dragginglogic.cpp.4A1979ABFF9903CF.idx  dragginglogic.h.3723CDAA2E22D809.idx  gcircle.cpp.61094FAAF297BD5A.idx  gcircle.cpp.F44AB26ED8AB4C2F.idx  gcircle.h.2EF8CEE6057BBB37.idx  gcircle.h.6D0D7F6D35345CB7.idx  gline.cpp.3BA63B5393C7D728.idx  gline.cpp.D56584916E0D9CC1.idx  gline.h.04C0E5B6C2788904.idx  gline.h.84F7A4EA6DF8A3D8.idx  gpolygon.cpp.88D55958CD6B0D77.idx  gpolygon.cpp.FDF732B18B9299DC.idx  gpolygon.h.8D5B0CB6A67B0017.idx  gpolygon.h.DD9A5BF3B783B560.idx  grectangle.cpp.40DAA1B9BE115929.idx  grectangle.cpp.EFBDE3791B4386D1.idx  grectangle.h.5E264CCF0940D9BD.idx  gtriangle.cpp.78A767398DDB2062.idx  gtriangle.cpp.D9030C1802387A67.idx  gtriangle.h.19E752732531D1C6.idx  gtriangle.h.398BD22716BD1E11.idx  main.cpp.1553C7C74CE633B5.idx  main.cpp.60B87CB5A20EB341.idx
cpp/: abstractgraphic.cpp  abstractgraphic.h  gcircle.cpp  gcircle.h  ghexagon.cpp  ghexagon.h  gline.cpp  gline.h  graphiclogic.cpp  grectangle.cpp  grectangle.h  gtriangle.cpp  gtriangle.h
qml/: MainPage.qml
